--- a/kirana-copilot-ai-main/backend/requirements.txt
+++ b/kirana-copilot-ai-main/backend/requirements.txt
@@ -1,10 +1,12 @@
 flask==3.0.0
 flask-cors==4.0.0
 transformers==4.36.0
-torch==2.1.0
+torch==2.2.0
 pillow==10.1.0
-numpy==1.24.3
+numpy==1.26.0
 opencv-python==4.8.1.78
 easyocr==1.7.1
 pytesseract==0.3.10
 pandas==2.1.4
+PyPDF2>=3.0.0
+pdf2image>=1.16.0
